--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, 'Lobster', cursive;
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, "Lobster", cursive;
 }
 
 .container {
@@ -49,7 +49,7 @@ header {
     justify-content: space-between;
     align-items: center;
     .logo a {
-      font-family: 'Roboto';
+      font-family: "Poppins";
       font-weight: 700;
       font-size: 2rem;
       text-decoration: none;
@@ -143,12 +143,12 @@ header {
             color: #fff;
             width: 300px;
             h3 {
-              font-size: 1.2rem;
+              font-size: 1.5rem;
               margin: 8px auto;
             }
             p {
               margin: 0 auto;
-              font-size: 0.8rem;
+              font-size: 1rem;
             }
           }
         }
