--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -26,21 +26,21 @@ html {
     font-size: 1.5rem;
     box-shadow: 5px 10px 18px #888888;
     background-color: black;
-    color: white;
+    text-decoration: none;
+    color: white !important;
     cursor: pointer; 
     transition: transform 0.3s; /* Animation */
 }
 
-.resume-button{
+.resume-button:hover{
     transform: scale(1.2);
 }
 
 .resume{
     text-decoration: none;
-    color: white;
+    color: white !important;
     transition: transform 0.3s; /* Animation */
 }
-
 
 .icons-container{
     display: flex;
