--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -16,9 +16,6 @@
     font-family:'poppins';
     font-weight: 400;
     color: black;
-    /* margin-top: 1rem;
-    margin-right: 1rem;
-    margin-left: 1rem; */
     margin-left: 1rem ;
     border-radius: 1rem;
 }
@@ -68,6 +65,7 @@
 
 textarea{
     width: 100%; /* Full width */
+    height: 5rem;
     padding: 12px; /* Some padding */ 
     border: 1px solid #ccc; /* Gray border */
     border-radius: 4px; /* Rounded borders */
